--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,3 +3,9 @@
 /Combinatorics/
 /In_Out/
 /NumberTheory/
+/CustomOrder.class
+/CustomOrder$Order.class
+/CustomComparable.class
+/test.class
+/CustomComparable$test.class
+/Sets/
