Added some BigInteger stuff

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,4 @@
-/Graphs/
-/Geometry/
 /Combinatorics/
-/In_Out/
 /NumberTheory/
-/CustomOrder.class
-/CustomOrder$Order.class
-/CustomComparable.class
-/test.class
-/CustomComparable$test.class
-/Sets/
+/Dynamic_Programming/
+/Graphs/
