--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,4 @@
-/Combinatorics/
-/NumberTheory/
-/Dynamic_Programming/
+/Synchronizing_lists.class
+/Synchronizing_Lists.class
+/Synchronizing_Lists$in.class
 /Graphs/
